[package]
name = "twit_backend"
version = "0.1.0"
authors = ["jodon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes", "unstable"] }
tide = "0.16.0"
sqlx = { version = "0.3", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "1"
async-trait = "0.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
run = "0.1.0"
